--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -405,7 +405,7 @@ a
 
 //***********************End of Tooltip Styling**********************************
 
-/*Dialod Content*/
+/*Dialog Content*/
 .form
   li
     list-style: none
@@ -417,42 +417,30 @@ a
     background: url(image-path("/images_en/icon_required.png")) 0  no-repeat
   input
     width: 200px
-    border: 1px solid #f5d852
     padding: 4px
   li span
     color: red
     font-size: 12px
-  .btn
-    margin: 0px 5px
-    background: #699
-    padding: 4px
-    color: white
-    border: 0
-    width: 120px
-    &:hover
-      background: #FC0
-      cursor: pointer
   textarea
     width: 200px
-    border: 1px solid #f5d852
     padding: 4px
     
 
 
 .dialogbutton
   margin: 0px 5px
-  background: #699
+  background: #999999
   padding: 4px
   color: white
   border: 0
   width: 120px
   &:hover
-    background: #FC0
+    background: #6D4479
     cursor: pointer
 .dialogclass.ui-dialog
   button
     margin: 0px 5px
-    background: #699
+    background: #999999
     padding: 4px
     color: white
     border: 0
@@ -462,11 +450,11 @@ a
     border-bottom-left-radius: 0
     border-bottom-right-radius: 0
     &:hover
-      background: #FC0
+      background: #6D4479
       cursor: pointer
   .small
     margin: -10px 5px
-    background: #FC0
+    background: #6D4479
     padding: 4px
     color: white
     border: 0
@@ -477,10 +465,10 @@ a
     border-bottom-left-radius: 0
     border-bottom-right-radius: 0
     &:hover
-      
       cursor: pointer
 .dialogtitle
-  background-color: #FFCC00
+  background-color: #6D4479
+  color: white
 
 /* Validation Error Messages*/
 span
