--- a/app/views/books/_add_book.html.haml
+++ b/app/views/books/_add_book.html.haml
@@ -52,7 +52,7 @@
                                        url: "/add_book?col_id=" + col_id +"&vol_id=" + "#{@addbookvol}", 
                                        dataType: "script",
                                        success: function(data){
-                                           $( "#confirmation_#{@number}" ).dialog( "open" );
+                                         $( "#confirmation_#{@number}" ).dialog( "open" );
                                        }
                                        });
                                 $(this).dialog("close");
@@ -63,7 +63,7 @@
                                    $.ajax({type: "GET", 
                                        url: "/add_book?title=" + escape(title) + "&description=" + escape(description) + "&is_public=" + escape(public) + "&vol_id=" + "#{@addbookvol}", 
                                        dataType: "script",
-                                        success: function(data){
+                                        success: function(){
                                            $( "#confirmation_#{@number}" ).dialog( "open" );
                                        }
                                        }) ;
