--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -108,6 +108,7 @@ h3 a
 
 .rate
   color: #f9d55a
+  background-color: #fcf8e3
 
 .spacing-left
   margin-left: 30px
@@ -267,6 +268,12 @@ a
   margin-top: 15px
 
 .home
+  .media
+    margin-top: 5px
+    margin-bottom: 5px
+    hr
+      margin-top: 5px
+      margin-bottom: 5px
   .activity-log
     line-height: 11px
     font-size: 11px
@@ -275,7 +282,7 @@ a
     background-color: #6d4479
     border-color: #6d4479
   .collection
-    height: 225px
+    height: 240px
     overflow: hidden
     margin-right: 10px
     img
@@ -295,6 +302,7 @@ a
       border: 1px solid #eeeeee
       border-bottom-color: transparent
       background-color: white
+      
 //NEW_LAYOUT DEVELOPER STYLING
 //***********************Start of Tooltip Styling********************************
 // This is the default Tooltipster theme (feel free to modify or duplicate and create multiple themes!):
