--- a/app/views/collections/_rating.html.haml
+++ b/app/views/collections/_rating.html.haml
@@ -53,7 +53,7 @@
           count = 0;
         }
         $.ajax({type: "GET", 
-                url: "/users/rate_collection?rate=" + count + "&user_id=" + "#{session[:user_id]}" + "&col_id=" + "#{@collection_id}", 
+                url: "/rate_collection?rate=" + count + "&user_id=" + "#{session[:user_id]}" + "&col_id=" + "#{@collection_id}", 
                 dataType: "script",
                 success: function(data){
                            
