--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -20,10 +20,10 @@
     %blockquote
       .col-md-2.column.pull-right
         - if(@collection.photo_name.blank?)
-          - @thumb = "images_#{I18n.locale}/nocollection140.png"
+          - @thumb = "/images_#{I18n.locale}/nocollection140.png"
         - else
           - @thumb = @collection.photo_name_url(:thumb)
-        = image_tag("/#{@thumb}",:class => "img-thumbnail")
+        = image_tag("#{@thumb}",:class => "img-thumbnail")
       %p
         = @collection.description
       %small
