redesigining search bars in homepage and browse all pages

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -18,6 +18,13 @@ h1, h2, h3, h4
   background-color: #FFF
   color: #dddddd
 
+.browse-all
+  border: 1px solid #CCC
+  border-radius: 5px
+  background-color: #FFF
+  color: #dddddd
+  padding: 15px
+
 .signin
   padding: 10px
   margin: 20px 0px
@@ -43,6 +50,10 @@ h1, h2, h3, h4
   .allcat
     background-color: #e3e3e3
     color: #9a9a9a
+
+.browse-all .allcat
+  background-color: #e3e3e3
+  color: #9a9a9a
 
 .allcat
   a
@@ -302,6 +313,9 @@ a
       border: 1px solid #eeeeee
       border-bottom-color: transparent
       background-color: white
+
+.margin-bottom
+  margin-bottom: 10px
       
 //NEW_LAYOUT DEVELOPER STYLING
 //***********************Start of Tooltip Styling********************************
