--- a/app/views/books/_breadcrumb.html.haml
+++ b/app/views/books/_breadcrumb.html.haml
@@ -33,15 +33,16 @@
   - @query_array.each do |key, val|
     - if(val != '')
       - val.each do |term|
-        .tab
+        .tab.center-block
           = term
           .close
             = link_to :params => removeBreadCrumb(@url_params, key, term) do
               ="&times;".html_safe
 
 - if (@query_array.any? and !(session[:user_id].nil?) and !(@query == "*:*"))
-  .pull-left.savequery
-    = link_to I18n.t(:save_query) , {:controller => :user_search_history, :action => :save_query, :query => parse_url_params(@url_params), :user_id => session[:user_id]}, :class => "btn btn-default btn-sm" 
+  .savequery.pull-right
+    = link_to I18n.t(:save_query) , {:controller => :user_search_history, :action => :save_query, :query => parse_url_params(@url_params), :user_id => session[:user_id]}, :class => "btn btn-success btn-sm"
+    = link_to I18n.t(:clear) , {:controller => :books, :action => :index}, :class => "btn btn-warning btn-sm" 
 
 .clearfix
 .col-md-7.sort.text-muted.pull-right
@@ -68,9 +69,9 @@
 
 
 
-%h4.text-muted
+%h4.text-muted.clearfix
   - if(@query != "*:*")
     = I18n.t(:books_found, :count => @response['response']['numFound'])
   - else
     =I18n.t(:books_found_all, :count => @response['response']['numFound'])
-
+%hr
