--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -30,7 +30,7 @@
     function headersearchfnc(e, field){
       var type = e.options[e.selectedIndex].value;
       searchquery = "_" + type + "=" + field;
-      window.location = window.location.href.split('?')[0] + "?" + searchquery;
+      window.location = window.location.protocol + "//" + window.location.host + "/books" + "?" + searchquery;
     }
   %body
     #wrap
@@ -44,34 +44,35 @@
               .input-append
                 %span.separator.pull-left.searchicon
                   %i.fa.fa-search.fa-lg.pull-left
-                .col-xs-7
+                .col-xs-6
                   %input.form-control{:id=> "headersearchfield", :type => "text",  :onkeypress => "if(event.keyCode == 13){headersearchfnc(document.getElementById('headersearchby'), document.getElementById('headersearchfield').value);return false;}"}
                 %span.separator.pull-left 
                   |
-                %select#headersearchby
-                  %option{:value => "ALL"} 
-                    = I18n.t(:option_all)
-                  %option{:value => "title", :selected => true} 
-                    = I18n.t(:option_title)
-                  %option{:value => "language"} 
-                    = I18n.t(:option_language)
-                  %option{:value => "published_on"} 
-                    = I18n.t(:option_publish_time)
-                  %option{:value => "publisher"} 
-                    = I18n.t(:option_publisher)
-                  %option{:value => "geo_location"} 
-                    = I18n.t(:option_regional_affiliation)
-                  %option{:value => "author"} 
-                    = I18n.t(:option_author)
-                  %option{:value => "name"} 
-                    = I18n.t(:option_tagged_species)
-                  %option{:value => "subject"} 
-                    = I18n.t(:option_genre)
-                  %option{:value => "content"} 
-                    = I18n.t(:option_content)
+                .btn-group.pull-left.col-xs-3
+                  %select.btn.allcat#headersearchby
+                    %option{:value => "ALL"} 
+                      = I18n.t(:option_all)
+                    %option.topdropdown-search{:value => "title", :selected => true} 
+                      = I18n.t(:option_title)
+                    %option.topdropdown-search{:value => "language"} 
+                      = I18n.t(:option_language)
+                    %option.topdropdown-search{:value => "published_on"} 
+                      = I18n.t(:option_publish_time)
+                    %option.topdropdown-search{:value => "publisher"} 
+                      = I18n.t(:option_publisher)
+                    %option.topdropdown-search{:value => "geo_location"} 
+                      = I18n.t(:option_regional_affiliation)
+                    %option.topdropdown-search{:value => "author"} 
+                      = I18n.t(:option_author)
+                    %option.topdropdown-search{:value => "name"} 
+                      = I18n.t(:option_tagged_species)
+                    %option.topdropdown-search{:value => "subject"} 
+                      = I18n.t(:option_genre)
+                    %option.topdropdown-search{:value => "content"} 
+                      = I18n.t(:option_content)
                 .clearfix.visible-xs  
-                %span.separator.pull-left 
-                  |    
+              %span.separator.pull-left 
+                |    
               %a.go.pull-left{:href => "#", :onclick=>"headersearchfnc(document.getElementById('headersearchby'), document.getElementById('headersearchfield').value); return false;"}
                 %i.fa.fa-arrow-circle-right.fa-2x
               .clearfix
