user profile edit design

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -317,6 +317,15 @@ a
 .margin-bottom
   margin-bottom: 10px
       
+.home .collection img
+  max-height: 130px
+  min-height: 130px
+  over-flow: hidden
+  
+.clip
+  position: absolute
+  clip: rect (0px, 110px, 140px, 0px)      
+
 //NEW_LAYOUT DEVELOPER STYLING
 //***********************Start of Tooltip Styling********************************
 // This is the default Tooltipster theme (feel free to modify or duplicate and create multiple themes!):
