--- a/app/views/users/_profile.html.haml
+++ b/app/views/users/_profile.html.haml
@@ -1,4 +1,13 @@
 :javascript
+  function confirmDelete(){
+    var r= confirm("#{I18n.t(:delete_photo_confirm)}");
+    if (r)
+      loadXMLDoc(1);
+    else{
+      $('#delete_photo').removeAttr('checked');
+      return false;
+      }
+  }
   function loadXMLDoc(is_delete){
       var xmlhttp;
       if (window.XMLHttpRequest)
@@ -14,6 +23,8 @@
       {
         if (xmlhttp.readyState==4 && xmlhttp.status==200)
         {
+          if (is_delete == 1)
+            alert("#{I18n.t(:delete_photo_flash)}");
           document.getElementById("photo").innerHTML=xmlhttp.responseText;
         }
       }  
