--- a/app/views/users/_get_user_profile_photo.html.haml
+++ b/app/views/users/_get_user_profile_photo.html.haml
@@ -5,5 +5,5 @@
   - else
     - thumb = @user.photo_name_url(:thumb)
     = image_tag("#{thumb}",:class => "img-thumbnail")
-    = check_box_tag("delete_photo","delete_photo",false, :onclick => "loadXMLDoc(1)")
+    = check_box_tag("delete_photo","delete_photo",false, :onclick => "confirmDelete()")
     = I18n.t(:delete_photo)
