--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -56,7 +56,7 @@
                       = I18n.t(:option_title)
                     %option.topdropdown-search{:value => "language"} 
                       = I18n.t(:option_language)
-                    %option.topdropdown-search{:value => "published_on"} 
+                    %option.topdropdown-search{:value => "published_at"} 
                       = I18n.t(:option_publish_time)
                     %option.topdropdown-search{:value => "publisher"} 
                       = I18n.t(:option_publisher)
