--- a/app/views/books/_search.html.haml
+++ b/app/views/books/_search.html.haml
@@ -12,8 +12,8 @@
     else{
       searchquery += "&_" + type + "=" + field;
     }
-    url = window.location.href.split('?')[0]
-    url = url.split('#')[0]
+    url = window.location.href.split('?')[0];
+    url = url.split('#')[0];
     window.location = url + "?" + searchquery;
   }
 .spacing-left
@@ -47,5 +47,5 @@
       %input.form-control{:id=> "searchfield", :type => "text", :onkeypress => "if(event.keyCode == 13){searchfnc('#{jsquery}', document.getElementById('searchby'), document.getElementById('searchfield').value);return false;}"}
       %span.input-group-btn
         %button.btn.btn-default{:onclick => "searchfnc('#{jsquery}', document.getElementById('searchby'), document.getElementById('searchfield').value); return false;"}
-          Go          
+          = I18n.t(:search_go)          
   %hr
