--- a/app/views/collections/_collectionreviews.html.haml
+++ b/app/views/collections/_collectionreviews.html.haml
@@ -75,7 +75,7 @@
           = link_to I18n.t(:please_login), {:controller => "users", :action => "login"}
 
 
-%a#modal-4.btn.pull-right.btn-default{:style => "margin-top: 2px; margin-right: 2px;","data-toggle" => "modal", :href => "#modal-container-4", :onclick => "loadformats('Comment', '');", :role => "button"} 
+%a#modal-4.btn.pull-right.btn-default{:style => "margin-top: 2px; margin-right: 2px;","data-toggle" => "modal", :href => "#modal-container-4", :role => "button"} 
   = I18n.t(:write_review)
   
 .panel-heading
