--- a/app/views/books/_reviews.html.haml
+++ b/app/views/books/_reviews.html.haml
@@ -76,7 +76,7 @@
 
 
 .reviews
-  %a#modal-4.btn.btn-primary.btn-sm.pull-right{"data-toggle" => "modal", :href => "#modal-container-4", :onclick => "loadformats('Comment', '');", :role => "button"} 
+  %a#modal-4.btn.btn-primary.btn-sm.pull-right{"data-toggle" => "modal", :href => "#modal-container-4", :role => "button"} 
     = "Write a review"
   %h3 
     = I18n.t(:reviews)
