--- a/app/views/books/_sidepanel.html.haml
+++ b/app/views/books/_sidepanel.html.haml
@@ -83,21 +83,24 @@
               - @addbookvol = params[:id]  
               =render :partial => "books/add_book"
     .list-group-item
-      #averagerate.rate
+      #averagerate
         - rate = @volume.rate
         - if @volume.rate.nil?
           - rate = 0.0
-        .averagerate{:style => "float: right", :data => "#{rate}"}
+        .rate
+          .averagerate{:style => "float: right", :data => "#{rate}"}
         %span.text-muted
           =I18n.t(:book_details_average_rate)
-      #detailedrate.rate
+      #detailedrate
       
+      
+      .rate{:style => "height: 23px;float: right;"}
+        = render :partial => "books/rating"
       %span.text-muted
         - if logged_in?
           =I18n.t(:book_details_user_rate)
-      .userbookrate{:style => "height: 25px;"}
-        = render :partial => "books/rating"
-      %br
+      
+        %br
     .list-group-item
       %span.badge.badge-success 
         ="#{@collections_count}"
