--- a/app/views/collections/edit.html.haml
+++ b/app/views/collections/edit.html.haml
@@ -57,6 +57,7 @@
                     = f.check_box :is_public
                     = I18n.t(:public_collection)
                     %i.fa.fa-unlock
+                    %p.help-block #{I18n.t(:public_collection_description)}
           .form-group
             .col-sm-2
             .col-sm-10
