styling names font style

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -263,7 +263,7 @@ a
       color: #ba8fba
 
 .activity-log
-  line-height: 11px
+  line-height: 16px
 
 .annotation
   border: 1px solid rgba(0, 0, 0, 0.2)
@@ -326,6 +326,15 @@ a
   position: absolute
   clip: rect (0px, 110px, 140px, 0px)      
 
+.tree, .hierarchy_id 
+  font-family: georgia
+
+.activity-listing .media, .activity-listing hr
+  margin: 0px
+  
+  
+  
+  
 //NEW_LAYOUT DEVELOPER STYLING
 //***********************Start of Tooltip Styling********************************
 // This is the default Tooltipster theme (feel free to modify or duplicate and create multiple themes!):
