removing search from browse all books, add search concatenation in header and adding autocomplete

--- a/app/views/books/_search.html.haml
+++ b/app/views/books/_search.html.haml
@@ -1,3 +1,4 @@
+- # This class is not used anymore but left for now as a backup if needed one day to retrieve search in browse books page
 :javascript  
   function searchfnc(searchquery, e, field){
     if(field == null || field == '')
