--- a/app/assets/stylesheets/bootstrap.sass
+++ b/app/assets/stylesheets/bootstrap.sass
@@ -1360,6 +1360,7 @@ textarea.input-lg
   margin-top: 5px
   margin-bottom: 10px
   color: #737373
+  font-size: 11px
 
 @media (min-width: 768px)
   .form-inline
