--- a/app/views/users/_get_user_profile_photo.html.haml
+++ b/app/views/users/_get_user_profile_photo.html.haml
@@ -6,5 +6,6 @@
     - thumb = @user.photo_name_url(:thumb)
     = image_tag("#{thumb}",:class => "img-thumbnail")
     - if !session[:user_id].nil? && params[:id].to_i == session[:user_id]
-      = check_box_tag("delete_photo","delete_photo",false, :onclick => "confirmDelete()")
-      = I18n.t(:delete_photo)
+      %div
+        = check_box_tag("delete_photo","delete_photo",false, :onclick => "confirmDelete()")
+        = I18n.t(:delete_photo)
