--- a/app/views/books/_breadcrumb.html.haml
+++ b/app/views/books/_breadcrumb.html.haml
@@ -51,19 +51,19 @@
       = I18n.t(:sort_by)
       %i.fa.fa-check-square{:style => "#{get_class_for_sort_option(params[:sort_type],'views')}; cursor:pointer;", :onclick => "go_to ('none');"}
       %i.fa.fa-square-o{:style => "#{get_class_for_active_sort_option(params[:sort_type],'views')}; cursor:pointer;", :onclick=> "go_to('views desc');"}
-      %a{:style=> "color:#777777;"} #{I18n.t(:viewed)}
+      %a{:style=> "color:#777777; cursor:pointer;", :onclick => "go_to('#{toggle_sort_option(params[:sort_type],'views')}');"} #{I18n.t(:viewed)}
       %i.fa.fa-arrow-down{:style => "#{get_class_for_sort_option(params[:sort_type],'views desc')}; cursor:pointer;", :onclick => "go_to('views asc');"}
       %i.fa.fa-arrow-up{:style => "#{get_class_for_sort_option(params[:sort_type],'views asc')}; cursor:pointer;", :onclick => "go_to('views desc');"}
       %span |
       %i.fa.fa-check-square{:style => "#{get_class_for_sort_option(params[:sort_type],'rate')}; cursor:pointer;", :onclick => "go_to ('none');"}
       %i.fa.fa-square-o{:style => "#{get_class_for_active_sort_option(params[:sort_type],'rate')}; cursor:pointer;", :onclick=> "go_to('rate desc');"}
-      %a{:style=> "color:#777777;"} #{I18n.t(:rates)}
+      %a{:style=> "color:#777777; cursor:pointer;", :onclick => "go_to('#{toggle_sort_option(params[:sort_type],'rate')}');"} #{I18n.t(:rates)}
       %i.fa.fa-arrow-down{:style => "#{get_class_for_sort_option(params[:sort_type],'rate desc')}; cursor:pointer;", :onclick => "go_to('rate asc');"}
       %i.fa.fa-arrow-up{:style => "#{get_class_for_sort_option(params[:sort_type],'rate asc')}; cursor:pointer;", :onclick => "go_to('rate desc');"}
       %span |
       %i.fa.fa-check-square{:style => "#{get_class_for_sort_option(params[:sort_type],'single_bok_title')}; cursor:pointer;", :onclick => "go_to ('none');"}
       %i.fa.fa-square-o{:style => "#{get_class_for_active_sort_option(params[:sort_type],'single_bok_title')}; cursor:pointer;", :onclick=> "go_to('single_bok_title asc');"}
-      %a{:style=> "color:#777777;"} #{I18n.t(:title)}
+      %a{:style=> "color:#777777; cursor:pointer;", :onclick => "go_to('#{toggle_sort_option(params[:sort_type],'single_bok_title')}');"} #{I18n.t(:title)}
       %i.fa.fa-arrow-down{:style => "#{get_class_for_sort_option(params[:sort_type],'single_bok_title desc')}; cursor:pointer;", :onclick => "go_to('single_bok_title asc');"}
       %i.fa.fa-arrow-up{:style => "#{get_class_for_sort_option(params[:sort_type],'single_bok_title asc')}; cursor:pointer;", :onclick => "go_to('single_bok_title desc');"}
 
