--- a/app/views/collections/_get_collection_photo.html.haml
+++ b/app/views/collections/_get_collection_photo.html.haml
@@ -6,5 +6,6 @@
     - thumb = @collection.photo_name_url(:thumb)
     = image_tag("#{thumb}",:class => "img-thumbnail")
     - if @collection.user_id == session[:user_id]
-      = check_box_tag("delete_photo","delete_photo",false, :onclick => "confirmDelete_photo()")
-      = I18n.t(:delete_photo)
+      %div
+        = check_box_tag("delete_photo","delete_photo",false, :onclick => "confirmDelete_photo()")
+        = I18n.t(:delete_photo)
