styling and titles en.yml jiras

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -335,7 +335,10 @@ a
 
 .tree, .hierarchy_id 
   font-family: georgia
-
+  
+.dialog-content
+  font-family: georgia
+  
 .activity-listing .media, .activity-listing hr
   margin: 0px
   
@@ -483,19 +486,25 @@ a
     cursor: pointer
 .dialogclass.ui-dialog
   button
-    margin: 0px 5px
-    background: #999999
-    padding: 4px
-    color: white
-    border: 0
-    width: 120px
-    border-top-left-radius: 0
-    border-top-right-radius: 0
-    border-bottom-left-radius: 0
-    border-bottom-right-radius: 0
-    &:hover
-      background: #6D4479
-      cursor: pointer
+    background-color: #FFFFFF
+    border-color: #CCCCCC
+    color: #333333
+    -moz-user-select: none
+    background-image: none
+    border: 1px solid rgba(0, 0, 0, 0)
+    border-radius: 4px
+    cursor: pointer
+    display: inline-block
+    font-size: 14px
+    font-weight: normal
+    line-height: 1.42857
+    margin-bottom: 0
+    padding: 6px 12px
+    text-align: center
+    vertical-align: middle
+    white-space: nowrap
+    
+    
   .small
     margin: -10px 5px
     background: #6D4479
