saved queries tab styling issues

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -333,14 +333,28 @@ a
   position: absolute
   clip: rect(0px, 110px, 140px, 0px)
 
-.tree, .hierarchy_id 
+.tree, .hierarchy_id
   font-family: georgia
+
+.activity-listing
+  .media, hr
+    margin: 0px
+
+.badge a
+  color: #FFF
+  text-decoration: none
+
+.alert-success a
+  color: #468847
+
+.alert-info a
+  color: #FFF
+
+.alert-warning a
+  color: #c09853
   
 .dialog-content
   font-family: georgia
-  
-.activity-listing .media, .activity-listing hr
-  margin: 0px
   
 //NEW_LAYOUT DEVELOPER STYLING
 //***********************Start of Tooltip Styling********************************
