--- a/app/views/users/_queries.html.haml
+++ b/app/views/users/_queries.html.haml
@@ -7,12 +7,14 @@
   %ul.list-group
     - @queries.each do |query|
       %li.list-group-item
-        %a{:href => "/user_search_history/delete_query/#{query.id}", :onclick => "return confirmDelete(\"#{I18n.t(:delete_saved_query_confirm)}\");"}
-          %i.fa.fa-times-circle
-        = "#{parse_query(query.string)}".html_safe        
-        %span.badge
-          %a{:href => "/books?#{query.string}"}
-            = "#{I18n.t(:user_queries_books_found)} #{get_number_of_returned_books(query.string)}"
+        = "#{parse_query(query.string)}".html_safe
+        %span.pull-right        
+          %span.badge
+            %a{:href => "/books?#{query.string}"}
+              = "#{I18n.t(:user_queries_books_found)} #{get_number_of_returned_books(query.string)}"
+          %a{:href => "/user_search_history/delete_query/#{query.id}", :onclick => "return confirmDelete(\"#{I18n.t(:delete_saved_query_confirm)}\");"}
+            %i.fa.fa-times-circle
+            = I18n.t(:delete)    
   - if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))
     .col-md-8
       .pagination-centered
