--- a/app/views/collections/_listresult.html.haml
+++ b/app/views/collections/_listresult.html.haml
@@ -2,7 +2,9 @@
 = javascript_include_tag 'jquery/rating/jRating.jquery.js'
 
 - if (!(@collections.nil? ) && @collections != '' && @collections_total_number> 0)
+  - counter = 0
   - @collections.each do |item|
+    - counter = counter + 1
     :javascript
       $(document).ready(function(){
         $("#starsidelink_#{item.id}").jRating({
@@ -14,7 +16,7 @@
     - else
       - @thumb = item.photo_name_url(:thumb)
     .col-md-4
-      .media.collection
+      %div{:id => "collection #{counter}", :class => "media collection", :name => "collection #{item.id}"}
         %a.pull-left{:href=>"#{collection_path(:id=>item.id)}"}
           =image_tag("#{@thumb}",:class => "media-object img-thumbnail")
         .media-body{:style=> "float:right;"}
